--- a/src/components/Chart/ChartBar.css
+++ b/src/components/Chart/ChartBar.css
@@ -8,9 +8,9 @@
 .chart-bar__inner {
   height: 100%;
   width: 100%;
-  border: 0.5px solid #6e91cf;
+  border: 1px solid #313131;
   border-radius: 12px;
-  background-color: #8bade8;
+  background-color: #c3b4f3;
   overflow: hidden;
   display: flex;
   flex-direction: column;
