--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -1,5 +1,5 @@
 .new-expense {
-  background-color: #92b4ee;
+  background-color: #a892ee;
   padding: 1rem;
   margin: 2rem auto;
   width: 50rem;
@@ -13,8 +13,8 @@
   font: inherit;
   cursor: pointer;
   padding: 1rem 2rem;
-  border: 1px solid #012767;
-  background-color: #012767;
+  border: 1px solid #40005d;
+  background-color: #40005d;
   color: white;
   border-radius: 12px;
   margin-right: 1rem;
@@ -22,12 +22,12 @@
 
 .new-expense button:hover,
 .new-expense button:active {
-  background-color: #033386;
-  border-color: #033386;
+  background-color: #510674;
+  border-color: #510674;
 }
 
 .new-expense button.alternative {
-  color: #080131;
+  color: #220131;
   border-color: transparent;
   background-color: transparent;
 }
