--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,7 +1,7 @@
 .chart {
   padding: 1rem;
   border-radius: 12px;
-  background-color: #cadaf6;
+  background-color: #f8dfff;
   text-align: center;
   display: flex;
   justify-content: space-around;
