--- a/src/components/EXPENSE/ExpenseDate.css
+++ b/src/components/EXPENSE/ExpenseDate.css
@@ -3,8 +3,8 @@
   flex-direction: column;
   width: 5.5rem;
   height: 5.5rem;
-  border: 1px solid #012767;
-  background-color: #000000;
+  border: 1px solid #ececec;
+  background-color: #2a2a2a;
   color: white;
   border-radius: 12px;
   align-items: center;
