--- a/src/components/EXPENSE/Expenses.css
+++ b/src/components/EXPENSE/Expenses.css
@@ -1,6 +1,6 @@
 .expenses {
   padding: 1rem;
-  background-color: #5680cb;
+  background-color: rgb(31, 31, 31);
   margin: 2rem auto;
   width: 50rem;
   max-width: 95%;
